# tanim

./: Cargo.toml  README.md
tanim-cli/: Cargo.toml
tanim-cli/src/: main.rs  video.rs
tanim-cli/src/video/: config.rs  debug.rs  error.rs  merger.rs  renderer.rs
tanim-vscode/: .gitignore  INSTALL.md  package-lock.json  package.json  start.ps1
tanim-vscode/src/: configInterceptor.ts  extension.ts  sliderViewProvider.ts
tanimist-core/: Cargo.toml
tanimist-core/src/: main.rs  video.rs
typst-examples/: manim-text.typ  physics.typ
